# StylePro

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
docs/: api.md  architecture.md
examples/: dash_app.py  streamlit_app.py
stylepro/: __init__.py
stylepro/core/: __init__.py  permissions.py  store.py  theme.py
stylepro/editor/: __init__.py  server.py
stylepro/editor/static/: color_picker.js  editor.css  editor.js
stylepro/integrations/: __init__.py  base.py  dash.py  streamlit.py
stylepro/utils/: __init__.py  css.py
tests/: conftest.py  test_css.py  test_permissions.py  test_server.py  test_store.py  test_theme.py
